# OVIA

./: .gitignore  .gitmodules  README.md
Projects/: CMakeLists.txt  Makefile  ModernPNG.sln  ModernPNG.vcxproj  ModernPNG.vcxproj.filters  OVIA.cmake  OVIA.sln  OVIA.vcxproj  OVIA.vcxproj.filters  libModernPNG.vcxproj  libModernPNG.vcxproj.filters
Projects/ModernFLAC.xcodeproj/: project.pbxproj
Projects/ModernPNG.xcodeproj/: project.pbxproj
Projects/OVIA.xcodeproj/: project.pbxproj
Projects/libPCM.xcodeproj/: project.pbxproj
Utilities/: ModernFLAC.c  ModernPNG.c  ModernPNG.cmake  TrimSilence.c
libOVIA/: OVIA.cmake  libModernPNG.cmake
libOVIA/include/: libModernFLAC.h  libOVIA.h
libOVIA/include/Private/: InternalOVIA.h  ModernPNGAdler32.h  OVIACommon.h  PNGCommon.h  WAVCommon.h  libOVIA_Types.h
libOVIA/include/Private/Audio/: WAVCommon.h
libOVIA/include/Private/Audio/FLAC/: FLACCommon.h  FLACTypes.h  libModernFLAC_Common.h
libOVIA/include/Private/Common/: libModernPNGAdler32.h
libOVIA/include/Private/Decode/: MD5.h
libOVIA/include/Private/Encode/: ApodizeModernFLAC.h
libOVIA/include/Private/Image/: PNGCommon.h  PNMCommon.h
libOVIA/src/: ModernPNGAdler32.c  Shared.c  libModernFLAC_Common.c
libOVIA/src/Common/: ModernFLACCommon.c  OVIA_MD5.c  libModernPNGAdler32.c
libOVIA/src/Decode/: AIFDecoder.c
libOVIA/src/Decode/Audio/: FLACDecoder.c  W64Decoder.c  WAVDecoder.c
libOVIA/src/Decode/Image/: BMPDecoder.c  PNGInflate.c
libOVIA/src/Decoder/: MD5.c
libOVIA/src/Encode/: AIFEncoder.c  BMPEncoder.c
libOVIA/src/Encode/Audio/: AIFEncoder.c
libOVIA/src/Encode/Image/: BMPEncoder.c  PNGDeflate.c
libOVIA/src/Encode/Image/PNG/: PNGAddMetadata.c
